--- a/views/index.html
+++ b/views/index.html
@@ -23,6 +23,73 @@
             <div class="centered">Mongo Scraper<br><a id="redditAddition">Reddit Addition</a></div>
         </div>
     </div>
+    <div class="article">
+        <div class="title">
+            <h2 class="titleText">random Title</h2>
+            <h3 class="saveButton" mongo-id="SWEET!!!" onclick="floop(this)">Save Post</h3>
+        </div>
+        <div class="content">
+            asdfasdfasdfasdfasdfasdfasdfasdfasdfasfsdfas
+        </div>
+    </div>
+    <div class="article">
+        <div class="title">
+            <h2 class="titleText">random Title</h2>
+            <h3 class="saveButton" mongo-id="SWEET!!!" onclick="floop(this)">Save Post</h3>
+        </div>
+        <div class="content">
+            asdfasdfasdfasdfasdfasdfasdfasdfasdfasfsdfas
+        </div>
+    </div>
+    <div class="article">
+        <div class="title">
+            <h2 class="titleText">random Title</h2>
+            <h3 class="saveButton" mongo-id="SWEET!!!" onclick="floop(this)">Save Post</h3>
+        </div>
+        <div class="content">
+            asdfasdfasdfasdfasdfasdfasdfasdfasdfasfsdfas
+        </div>
+    </div>
+    <div class="article">
+        <div class="title">
+            <h2 class="titleText">random Title</h2>
+            <h3 class="saveButton" mongo-id="SWEET!!!" onclick="floop(this)">Save Post</h3>
+        </div>
+        <div class="content">
+            asdfasdfasdfasdfasdfasdfasdfasdfasdfasfsdfas
+        </div>
+    </div>
+    <div class="article">
+        <div class="title">
+            <h2 class="titleText">random Title</h2>
+            <h3 class="saveButton" mongo-id="SWEET!!!" onclick="floop(this)">Save Post</h3>
+        </div>
+        <div class="content">
+            asdfasdfasdfasdfasdfasdfasdfasdfasdfasfsdfas
+        </div>
+    </div>
+    <div class="article">
+        <div class="title">
+            <h2 class="titleText">random Title</h2>
+            <h3 class="saveButton" mongo-id="SWEET!!!" onclick="floop(this)">Save Post</h3>
+        </div>
+        <div class="content">
+            asdfasdfasdfasdfasdfasdfasdfasdfasdfasfsdfas
+        </div>
+    </div>
+    <div class="article">
+        <div class="title">
+            <h2 class="titleText">random Title</h2>
+            <h3 class="saveButton" mongo-id="SWEET!!!" onclick="floop(this)">Save Post</h3>
+        </div>
+        <div class="content">
+            asdfasdfasdfasdfasdfasdfasdfasdfasdfasfsdfas
+        </div>
+    </div>
+    <div class="spacer"></div>
+    <div class="footer">
+        Mongo Scraper
+    </div>
 </body>
 
 </html>
