--- a/views/index.html
+++ b/views/index.html
@@ -23,27 +23,22 @@
             <div class="centered">Mongo Scraper<br><a id="redditAddition">Reddit Addition</a></div>
         </div>
     </div>
-    <div class="article">
-        <div class="title">
-            <h2 class="titleText">random Title</h2>
-            <h3 class="saveButton" mongo-id="SWEET!!!" onclick="floop(this)">Save Post</h3>
-        </div>
-        <div class="content">
-            asdfasdfasdfasdfasdfasdfasdfasdfasdfasfsdfas
-        </div>
+    <div class="alert">
+        Oh No! it looks like we don't have any reddits!
     </div>
     <div class="article">
         <div class="title">
-            <h2 class="titleText">random Title</h2>
-            <h3 class="saveButton" mongo-id="SWEET!!!" onclick="floop(this)">Save Post</h3>
+            <h5 class="noTitle">What would you like to do?</h5>
         </div>
-        <div class="content">
-            asdfasdfasdfasdfasdfasdfasdfasdfasdfasfsdfas
+        <div class="noContent">
+            <h3>Scrape some new Reddits</h3>
+            <h3><a href="/saved">Go To Saved Reddits</a></h3>
         </div>
     </div>
+
     <div class="article">
         <div class="title">
-            <h2 class="titleText">random Title</h2>
+            <h2 class="titleText"><a href="">random Title</a></h2>
             <h3 class="saveButton" mongo-id="SWEET!!!" onclick="floop(this)">Save Post</h3>
         </div>
         <div class="content">
