--- a/views/assets/css/style.css
+++ b/views/assets/css/style.css
@@ -89,25 +89,36 @@ body {
     min-height: 100px;
     box-shadow: 10px 5px 20px 2px lightslategrey;
     margin-bottom: 15px;
+    overflow: hidden;
 }
 
 .title {
+    clear: both;
     margin: auto;
     float: left;
-    width: 99%;
-    padding: 10px;
+    width: 100%;
+    padding: 5px;
     background: rebeccapurple
 }
 
 .titleText {
     width: 90%;
+    margin-left: 10px;
     float: left;
     color: white;
 }
 
+.titleText a{
+    width: 90%;
+    margin-left: 10px;
+    float: left;
+    color: white;
+    text-decoration: none;
+}
+
 .saveButton {
     width: 8%;
-    float: right;
+    float: left;
     text-align: center;
     color: black;
     background: skyblue;
@@ -119,11 +130,55 @@ body {
     transform: translateY(2px)
 }
 
+.noTitle {
+    margin: 0;
+    font-size: 30px;
+    text-align: center;
+    color: white;
+    padding: 10px;
+}
+
+.noContent {
+    clear: both;
+    font-size: 25px;
+    color: black;
+    padding: 10px;
+    text-align: center
+}
+
+.noContent h3 {
+    clear: both;
+    font-size: 25px;
+    color: rgb(54, 77, 211);
+    text-align: center;
+    text-decoration: underline;
+}
+
+.noContent h3 a {
+    clear: both;
+    font-size: 25px;
+    color: rgb(54, 77, 211);
+    text-align: center;
+    text-decoration: underline;
+}
+
 .content {
     clear: both;
     font-size: 25px;
     color: black;
     padding: 10px;
+}
+
+.alert {
+    width: 97%;
+    margin: auto;
+    text-align: center;
+    background: rgba(221, 128, 22, 0.644);
+    font-size: 30px;
+    color: rebeccapurple;
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 10px;
 }
 
 .spacer {
