--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
-		<title>Mongo Scraper</title>
-		<script src="/assets/js/javascript.js"></script>
-	</head>
-	<body>
+	<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+	<title>Mongo Scraper</title>
+	<script src="/assets/js/javascript.js"></script>
+</head>
+
+<body>
+	<div class="titleBar">
+		<h2>Mongo Scraper</h2>
+		<h3><a href="/">Home</a></h3>
+		<h3><a href="/saved">Saved Reddits</a></h3>
+		<h3><a id="scrape">Scrape more</a></h3>
+		<h3><a id="clearAll">clear Reddits</a></h3>
+	</div>
+	<div class="container">
+		<img height="500px" width="100%" src="https://devonhennig.com/wp-content/uploads/2018/02/reddit-banner.jpg"
+			alt="Banner image">
+		<div class="centered" id="chat-window">
+			<div class="centered" style="width: 100%">Mongo Scraper<br><a id="redditAddition">Reddit Addition</a></div>
+		</div>
+	</div>
+	<div id="bodyDiv">
 		{{{ body }}}
-	</body>
+	</div>
+	<div class="spacer"></div>
+	<div class="footer">
+		Mongo Scraper
+	</div>
+</body>
+
 </html>
