--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,8 +13,8 @@
 		<h2>Mongo Scraper</h2>
 		<h3><a href="/">Home</a></h3>
 		<h3><a href="/saved">Saved Reddits</a></h3>
-		<h3><a id="scrape">Scrape more</a></h3>
-		<h3><a id="clearAll">clear Reddits</a></h3>
+		<h3 onclick="scrape()"><a id="scrape">Scrape more</a></h3>
+		<h3 onclick="antiScrape()"><a id="clearAll">clear Reddits</a></h3>
 	</div>
 	<div class="container">
 		<img height="500px" width="100%" src="https://devonhennig.com/wp-content/uploads/2018/02/reddit-banner.jpg"
@@ -29,6 +29,26 @@
 	<div class="spacer"></div>
 	<div class="footer">
 		Mongo Scraper
+	</div>
+	<!-- The Modal -->
+	<div id="myModal" class="modal">
+
+		<!-- Modal content -->
+		<div class="modal-content">
+			<span class="close">&times;</span>
+			<p id="modalText">Some text in the Modal..</p>
+			<div id="repeater">
+				
+			</div>
+			<textarea id="textArea" rows="4" cols="64"></textarea>
+			<div onclick="deletePost()" class="bottomButton">
+				Delete Post
+			</div>
+			<div onclick="saveNote()" class="bottomButton">
+				Save Note
+			</div>
+		</div>
+
 	</div>
 </body>
 
